--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "cross-env": "^7.0.3",
     "pwgen": "^1.2.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -34,7 +35,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "ESLINT_NO_DEV_ERRORS=true react-scripts start",
+    "start": "cross-env ESLINT_NO_DEV_ERRORS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
