--- a/client/package.json
+++ b/client/package.json
@@ -108,6 +108,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@types/react-calendar-timeline": "^0.28.2",
     "@types/react-pdf": "^6.2.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
