--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
+    "@react-icons/all-files": "^4.1.0",
     "@react-pdf/renderer": "^3.1.9",
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -125,6 +125,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "tailwindcss": "^3.3.2"
   }
 }
