--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-icons/all-files": "^4.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
+    "@react-icons/all-files": "^4.1.0",
     "@react-pdf/renderer": "^3.1.9",
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
@@ -22,12 +22,14 @@
     "@types/react-dom": "^18.2.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "cross-env": "^7.0.3",
     "pwgen": "^1.2.6",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-calendar": "^4.2.1",
     "react-calendar-timeline": "^0.28.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.9.0",
