--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -62,6 +62,9 @@
     "no-nested-ternary": 0,
     "@typescript-eslint/no-unsafe-call": 0,
     "react/jsx-props-no-spreading": 0,
-    "@typescript-eslint/no-misused-promises": 0
+    "@typescript-eslint/no-misused-promises": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
+    "@typescript-eslint/dot-notation": 0,
+    "jsx-a11y/click-events-have-key-events": 0
   }
 }
