--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,6 @@
   "name": "server",
   "version": "2.0.0",
   "description": "",
-  
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -16,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "helmet": "^6.1.5",
     "nodemailer": "^6.9.2",
